opam-version: "2.0"
name: "rescript-promise"
version: "2.1.0"
maintainer: "Patrick Ecker"
authors: "Patrick Ecker"
license: "MIT"
homepage: "https://github.com/ryyppy/rescript-promise/"
bug-reports: "https://github.com/ryyppy/rescript-promise/issues"
dev-repo: "git://github.com/ryyppy/rescript-promise/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "2020 proposal for new ReScript promise bindings"
depends: [
  "dune" {>= "3.8"}
  "melange"
  "rescript-syntax"
]
#FIXME node-fetch
